k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shopping
spec:
  rules:
  - host: shopping.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clothes-service
            port:
              number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rent
spec:
  rules:
  - host: rent.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: house-service
            port:
              number: 8081
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-music-nepali
spec:
  rules:
  - host: nepali-music.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nepali-service
            port:
              number: 8083
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-music-english
spec:
  rules:
  - host: english-music.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: english-service
            port:
              number: 8082
  ingressClassName: nginx
